<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/informacion_recopilada" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:text=" " />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/InfoTxtNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.08"
                android:text="@string/nombre_registro" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:hint="Nombre Registro" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/infoLatitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.14"
                android:text="@string/latitud" />

            <TextView
                android:id="@+id/txtInfoLatitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/infoLongitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.11"
                android:text="@string/longitud" />

            <TextView
                android:id="@+id/txtInfoLongitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/infoAltura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.14"
                android:text="@string/altura" />

            <TextView
                android:id="@+id/txtInfoAltura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/infoTipoRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.11"
                android:text="@string/tipoDeRed" />

            <TextView
                android:id="@+id/txtInfoTipoRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/infoDireccionIp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:text="@string/direccion" />

            <TextView
                android:id="@+id/txtInfoDireccionIp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/infoRoaming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.12"
                android:text="@string/roaming" />

            <TextView
                android:id="@+id/txtInfoRoaming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/infoEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.21"
                android:text="@string/estado" />

            <TextView
                android:id="@+id/txtInfoEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/infoEstadoDetallado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.04"
                android:text="@string/estadoDetallado" />

            <TextView
                android:id="@+id/txtInfoEstadoDetallado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/info10K"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:text="@string/info_10k" />

            <TextView
                android:id="@+id/txtInfo10k"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/info100K"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.04"
                android:text="@string/info_100k" />

            <TextView
                android:id="@+id/txtInfo100k"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/info1mb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.03"
                android:text="@string/info_1mb" />

            <TextView
                android:id="@+id/txtInfo1mb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.71"
        android:text=" " />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnVerInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.03"
                android:text="@string/btnInfoVerRegistros" />

            <Button
                android:id="@+id/btnInfoInsertar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.03"
                android:text="@string/btnInfoGuardar" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>