<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/InformacionGeoUbicacion" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/latitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.14"
                android:text="@string/latitud" />

            <TextView
                android:id="@+id/txtLatitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/longitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:text="@string/longitud" />

            <TextView
                android:id="@+id/txtLongitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/altura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.11"
                android:text="@string/altura" />

            <TextView
                android:id="@+id/txtAltura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="  " />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/InformacionConexion" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tipoRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.11"
                android:text="@string/tipoDeRed" />

            <TextView
                android:id="@+id/txTipoRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/direccionIp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:text="@string/direccion" />

            <TextView
                android:id="@+id/txtDireccionIp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/roaming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.11"
                android:text="@string/roaming" />

            <TextView
                android:id="@+id/txtRoaming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/estado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                android:text="@string/estado" />

            <TextView
                android:id="@+id/txtEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/estadoDetallado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.03"
                android:text="@string/estadoDetallado" />

            <TextView
                android:id="@+id/txtEstadoDetallado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="  " />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/TestConectividad" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/main__checkbox_and_text_real_web"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:orientation="horizontal" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent" >
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/checkbox10kb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/descargar_10KB" />
                    </RelativeLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="180dp"
                    android:layout_height="fill_parent" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true" >

                        <ProgressBar
                            android:id="@+id/main__progressbar_10kb_download"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="8dp" />

                        <TextView
                            android:id="@+id/txt10kb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/main__progressbar_10kb_download"
                            android:layout_centerHorizontal="true"
                            android:text="@string/valor_vacio" />
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/checkbox100kb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/descargar_100KB" />
                    </RelativeLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="180dp"
                    android:layout_height="fill_parent" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true" >

                        <ProgressBar
                            android:id="@+id/main__progressbar_100kb_download"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="8dp" />

                        <TextView
                            android:id="@+id/txt100kb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/main__progressbar_100kb_download"
                            android:layout_centerHorizontal="true"
                            android:text="@string/valor_vacio" />
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/checkbox1mb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/descargar_1MB" />
                    </RelativeLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="180dp"
                    android:layout_height="fill_parent" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true" >

                        <ProgressBar
                            android:id="@+id/main__progressbar_1mb_download"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="8dp" />

                        <TextView
                            android:id="@+id/txt1mb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/main__progressbar_1mb_download"
                            android:layout_centerHorizontal="true"
                            android:text="@string/valor_vacio" />
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_weight="0.40"
        android:text=" " />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnOperar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnTestConexion" />

            <Button
                android:id="@+id/btnGuardarInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnGuardarInfo" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>